--- a/src/app/components/lab-measurement/lab-measurement.component.html
+++ b/src/app/components/lab-measurement/lab-measurement.component.html
@@ -1,485 +1,72 @@
-<div class="form-check">
 
-</div>
-
-<div class="container-xl">
-	<div class="table-responsive">
-		<div class="table-wrapper">
-			<div class="table-title">
-				<div class="row">
-					<div class="col-sm-6">
-						<h2>Filter <b>Labs</b></h2>
-					</div>
-
-          <label class="form-check-label" for="flexRadioDefault1">
-            Well Id
-            <td class="pt-3-half" contenteditable="true"><input type="text" name="id" [(ngModel)]="wellFilter" class="border-none">
-              <button type="button" (click)=filterById()
-              class="btn btn-danger btn-rounded btn-sm my-0">Filter</button>
-            </td>
-          </label>
-          
-          <label class="form-check-label" for="flexRadioDefault1">
-            labId
-
-            <td class="pt-3-half" contenteditable="true">
-              <input type="text" name="id" [(ngModel)]="labF" class="border-none">
-              <button type="button" (click)=filterByWellAndLab()
-              class="btn btn-danger btn-rounded btn-sm my-0">Filter</button>
-            </td>
-
-          </label>
-          
-          <label class="form-check-label" for="flexRadioDefault1">
-            StartDate
-            <td class="pt-3-half" contenteditable="true"><input type="text" name="id" [(ngModel)]="startDate" class="border-none">
-            </td>EndDate
-            <td class="pt-3-half" contenteditable="true">
-              <input type="text" name="id" [(ngModel)]="endDate" class="border-none">
-              <button type="button" (click)=filterByDate()
-              class="btn btn-danger btn-rounded btn-sm my-0">Filter</button>
-            </td>
-          </label>
-
-
-
-				</div>
-			</div>
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Bootstrap CRUD Data Table for Database with Modal Form</title>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<style>
-body {
-	color: #566787;
-	background: #f5f5f5;
-	font-family: 'Varela Round', sans-serif;
-	font-size: 13px;
-}
-.table-responsive {
-    margin: 30px 0;
-}
-.table-wrapper {
-	background: #fff;
-	padding: 20px 25px;
-	border-radius: 3px;
-	min-width: 1000px;
-	box-shadow: 0 1px 1px rgba(0,0,0,.05);
-}
-.table-title {        
-	padding-bottom: 15px;
-	background: #435d7d;
-	color: #fff;
-	padding: 16px 30px;
-	min-width: 100%;
-	margin: -20px -25px 10px;
-	border-radius: 3px 3px 0 0;
-}
-.table-title h2 {
-	margin: 5px 0 0;
-	font-size: 24px;
-}
-.table-title .btn-group {
-	float: right;
-}
-.table-title .btn {
-	color: #fff;
-	float: right;
-	font-size: 13px;
-	border: none;
-	min-width: 50px;
-	border-radius: 2px;
-	border: none;
-	outline: none !important;
-	margin-left: 10px;
-}
-.table-title .btn i {
-	float: left;
-	font-size: 21px;
-	margin-right: 5px;
-}
-.table-title .btn span {
-	float: left;
-	margin-top: 2px;
-}
-table.table tr th, table.table tr td {
-	border-color: #e9e9e9;
-	padding: 12px 15px;
-	vertical-align: middle;
-}
-table.table tr th:first-child {
-	width: 60px;
-}
-table.table tr th:last-child {
-	width: 100px;
-}
-table.table-striped tbody tr:nth-of-type(odd) {
-	background-color: #fcfcfc;
-}
-table.table-striped.table-hover tbody tr:hover {
-	background: #f5f5f5;
-}
-table.table th i {
-	font-size: 13px;
-	margin: 0 5px;
-	cursor: pointer;
-}	
-table.table td:last-child i {
-	opacity: 0.9;
-	font-size: 22px;
-	margin: 0 5px;
-}
-table.table td a {
-	font-weight: bold;
-	color: #566787;
-	display: inline-block;
-	text-decoration: none;
-	outline: none !important;
-}
-table.table td a:hover {
-	color: #2196F3;
-}
-table.table td a.edit {
-	color: #FFC107;
-}
-table.table td a.delete {
-	color: #F44336;
-}
-table.table td i {
-	font-size: 19px;
-}
-table.table .avatar {
-	border-radius: 50%;
-	vertical-align: middle;
-	margin-right: 10px;
-}
-.pagination {
-	float: right;
-	margin: 0 0 5px;
-}
-.pagination li a {
-	border: none;
-	font-size: 13px;
-	min-width: 30px;
-	min-height: 30px;
-	color: #999;
-	margin: 0 2px;
-	line-height: 30px;
-	border-radius: 2px !important;
-	text-align: center;
-	padding: 0 6px;
-}
-.pagination li a:hover {
-	color: #666;
-}	
-.pagination li.active a, .pagination li.active a.page-link {
-	background: #03A9F4;
-}
-.pagination li.active a:hover {        
-	background: #0397d6;
-}
-.pagination li.disabled i {
-	color: #ccc;
-}
-.pagination li i {
-	font-size: 16px;
-	padding-top: 6px
-}
-.hint-text {
-	float: left;
-	margin-top: 10px;
-	font-size: 13px;
-}    
-/* Custom checkbox */
-.custom-checkbox {
-	position: relative;
-}
-.custom-checkbox input[type="checkbox"] {    
-	opacity: 0;
-	position: absolute;
-	margin: 5px 0 0 3px;
-	z-index: 9;
-}
-.custom-checkbox label:before{
-	width: 18px;
-	height: 18px;
-}
-.custom-checkbox label:before {
-	content: '';
-	margin-right: 10px;
-	display: inline-block;
-	vertical-align: text-top;
-	background: white;
-	border: 1px solid #bbb;
-	border-radius: 2px;
-	box-sizing: border-box;
-	z-index: 2;
-}
-.custom-checkbox input[type="checkbox"]:checked + label:after {
-	content: '';
-	position: absolute;
-	left: 6px;
-	top: 3px;
-	width: 6px;
-	height: 11px;
-	border: solid #000;
-	border-width: 0 3px 3px 0;
-	transform: inherit;
-	z-index: 3;
-	transform: rotateZ(45deg);
-}
-.custom-checkbox input[type="checkbox"]:checked + label:before {
-	border-color: #03A9F4;
-	background: #03A9F4;
-}
-.custom-checkbox input[type="checkbox"]:checked + label:after {
-	border-color: #fff;
-}
-.custom-checkbox input[type="checkbox"]:disabled + label:before {
-	color: #b8b8b8;
-	cursor: auto;
-	box-shadow: none;
-	background: #ddd;
-}
-/* Modal styles */
-.modal .modal-dialog {
-	max-width: 400px;
-}
-.modal .modal-header, .modal .modal-body, .modal .modal-footer {
-	padding: 20px 30px;
-}
-.modal .modal-content {
-	border-radius: 3px;
-	font-size: 14px;
-}
-.modal .modal-footer {
-	background: #ecf0f1;
-	border-radius: 0 0 3px 3px;
-}
-.modal .modal-title {
-	display: inline-block;
-}
-.modal .form-control {
-	border-radius: 2px;
-	box-shadow: none;
-	border-color: #dddddd;
-}
-.modal textarea.form-control {
-	resize: vertical;
-}
-.modal .btn {
-	border-radius: 2px;
-	min-width: 100px;
-}	
-.modal form label {
-	font-weight: normal;
-}	
-</style>
-</head>
-<body>
-<div class="container-xl">
-	<div class="table-responsive">
-		<div class="table-wrapper">
-			<div class="table-title">
-				<div class="row">
-					<div class="col-sm-6">
-						<h2>Manage <b>Labs</b></h2>
-					</div>
-					<div *ngIf="isChecked" class="col-sm-6">
-						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add A New Lab</span></a>
-						<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete The Lab</span></a>						
-					</div>
-				</div>
-			</div>
-
-      <table class="table table-striped table-hover">
-        <thead>
-            <tr>
-              <th>#</th>
-              <th>Id</th>
-              <th>Date</th>
-              <th>remarks</th>
-              <th>s1</th>
-              <th>s2</th>
-              <th>s3</th>
-              <th>s4</th>
-              <th>s5</th>
-            </tr>
-        </thead>
-        <tbody>
-          
-
-            <tr *ngFor="let lab of labs; let currentIndex=index">
-              <td>
-                <span class="custom-checkbox">
-                  <input type="checkbox" id="checkbox1" name="options[]" value="1"  (click)="equal(currentIndex)" [checked]="lab.checked"
-                  >
-                  <label for="checkbox1"></label>
-                </span>
-              </td>
-              <td>{{lab.id}}</td>
-              <td>{{lab.date | date: 'dd-MM-yyyy'}}</td>
-              <td>{{lab.remarks}}</td>
-              <td>{{lab.s1}}</td>
-              <td>{{lab.s2}}</td>
-              <td>{{lab.s3}}</td>
-              <td>{{lab.s4}}</td>
-              <td>{{lab.s5}}</td>
-              <td>
-                <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete" >&#xE872;</i></a>
-              </td>
-            </tr>
-        </tbody>
-    </table>
-
-			<div class="clearfix">
-				<div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-				<ul class="pagination">
-					<li class="page-item disabled"><a href="#">Previous</a></li>
-					<li class="page-item"><a href="#" class="page-link">1</a></li>
-					<li class="page-item"><a href="#" class="page-link">2</a></li>
-					<li class="page-item active"><a href="#" class="page-link">3</a></li>
-					<li class="page-item"><a href="#" class="page-link">4</a></li>
-					<li class="page-item"><a href="#" class="page-link">5</a></li>
-					<li class="page-item"><a href="#" class="page-link">Next</a></li>
-				</ul>
-			</div>
+<div class="container">
+	<div class="card">
+	  <div class="card-body">
+		<br />
+		<div class="row">
+		  <div class="col-md-12">
+			<button *ngIf="highlightedRow !== -1"class="btn btn-danger" (click)="deleteFromLabs()">🗑️</button>
+			<button *ngIf="highlightedRow !== -1" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
+			<button class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
+  
+			<ng-template #modalData let-modal>
+			  <div class="modal-header">
+				<h4 class="modal-title" id="modal-basic-title">Insert New Lab Record</h4>
+				<button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+				  <span aria-hidden="true">×</span>
+				</button>
+			  </div>
+			  <app-add-new-lab (closeModal)=closePopUpAndRefreshTable()></app-add-new-lab>
+			</ng-template>
+  
+			<ng-template #modalDataUpdate let-modal>
+			  <div class="modal-header">
+				<h4 class="modal-title" id="modal-basic-title">Update A Lab Record</h4>
+				<button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+				  <span aria-hidden="true">×</span>
+				</button>
+			  </div>
+			  <app-update-lab [labToBeUpdate]="labToBeUpdate" (closeModal)=closePopUpAndRefreshTable()></app-update-lab>
+			</ng-template>
+  
+		  </div>
 		</div>
-	</div>        
-</div>
-<!-- Edit Modal HTML -->
-<div id="addEmployeeModal" class="modal fade">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<form>
-				<div class="modal-header">						
-					<h4 class="modal-title">Add A Lab</h4>
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				</div>
-				<div class="modal-body">					
-					<div class="form-group">
-						<label>well Id</label>
-						<input type="text" name = "id" [(ngModel)]="id" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label>Date</label>
-						<input type="text" name = "date" [(ngModel)]="l.date" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label>remarks</label>
-            <input type="text" name = "remarks" [(ngModel)]="l.remarks" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label>s1</label>
-						<input type="text" name = "s1" [(ngModel)]="l.s1" class="form-control" required>
-					</div>			
-          <div class="form-group">
-						<label>s2</label>
-						<input type="text" name = "s2" [(ngModel)]="l.s2" class="form-control" required>
-					</div>		
-          <div class="form-group">
-						<label>s3</label>
-						<input type="text" name = "s3" [(ngModel)]="l.s3" class="form-control" required>
-					</div>		
-          <div class="form-group">
-						<label>s4</label>
-            <input type="text" name = "s4" [(ngModel)]="l.s4" class="form-control" required>
-
-					</div>	
-          <div class="form-group">
-						<label>s5</label>
-						<input type="text" name = "s5" [(ngModel)]="l.s5" class="form-control" required>
-					</div>					
-				</div>
-				<div class="modal-footer">
-					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-					<input type="submit" class="btn btn-success" value="Add" (click)=insert()>
-				</div>
-			</form>
+		<div class="row">
+		  <div class="col-md-12">
+			<table class="table table-bordered table-hover">
+			  <thead>
+				<tr>
+					<th>Id</th>
+					<th>Date</th>
+					<th>remarks</th>
+					<th>s1</th>
+					<th>s2</th>
+					<th>s3</th>
+					<th>s4</th>
+					<th>s5</th>
+				</tr>
+			  </thead>
+			  <tbody>
+				<tr
+				  *ngFor="let lab of labs; let currentIndex = index"
+				  (click)="ClickedRowToDelete(currentIndex); ClickedRowToUpdate(currentIndex)"
+				  [class.active]="currentIndex == highlightedRow"
+				>
+				  <td style="display: none">{{ currentIndex + 1 }}</td>
+				  <td>{{lab.id}}</td>
+				  <td>{{lab.date | date: 'dd-MM-yyyy'}}</td>
+				  <td>{{lab.remarks}}</td>
+				  <td>{{lab.s1}}</td>
+				  <td>{{lab.s2}}</td>
+				  <td>{{lab.s3}}</td>
+				  <td>{{lab.s4}}</td>
+				  <td>{{lab.s5}}</td>
+				</tr>
+			  </tbody>
+			</table>
+		  </div>
 		</div>
+	  </div>
 	</div>
-</div>
-<!-- Edit Modal HTML -->
-<div id="editEmployeeModal" class="modal fade">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<form>
-				<div class="modal-header">						
-					<h4 class="modal-title">Edit A Lab</h4>
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				</div>
-				<div class="modal-body">	
-					<div class="form-group">
-						<label>Date</label>
-						<input type="text" name = "date" [(ngModel)]="l2.date" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label>remarks</label>
-            <input type="text" name = "remarks" [(ngModel)]="l2.remarks" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label>s1</label>
-						<input type="text" name = "s1" [(ngModel)]="l2.s1" class="form-control" required>
-					</div>			
-          <div class="form-group">
-						<label>s2</label>
-						<input type="text" name = "s2" [(ngModel)]="l2.s2" class="form-control" required>
-					</div>		
-          <div class="form-group">
-						<label>s3</label>
-						<input type="text" name = "s3" [(ngModel)]="l2.s3" class="form-control" required>
-					</div>		
-          <div class="form-group">
-						<label>s4</label>
-            <input type="text" name = "s4" [(ngModel)]="l2.s4" class="form-control" required>
+  </div>
 
-					</div>	
-          <div class="form-group">
-						<label>s5</label>
-						<input type="text" name = "s5" [(ngModel)]="l2.s5" class="form-control" required>
-					</div>					
-				</div>
-				<div class="modal-footer">
-					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-					<input type="submit" class="btn btn-info" value="Save" (click)="edit(LabIdD)">
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
-<!-- Delete Modal HTML -->
-<div id="deleteEmployeeModal" class="modal fade">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<form>
-				<div class="modal-header">						
-					<h4 class="modal-title">Delete A Lab</h4>
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				</div>
-				<div class="modal-body">					
-					<p>Are you sure you want to delete these Records?</p>
-					<p class="text-warning"><small>This action cannot be undone.</small></p>
-				</div>
-				<div class="modal-footer">
-					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-					<input type="submit" class="btn btn-danger" value="Delete" (click)="deleteFromLabs(LabIdD)">
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
-</body>
-
-</html>
