--- a/src/app/components/field/field.component.html
+++ b/src/app/components/field/field.component.html
@@ -1,83 +1,71 @@
-<!--<p>field works!</p>-->
-<!--<p>well works!</p>-->
-<div class="form-check">
-  <label class="form-check-label" for="flexRadioDefault1">
-    Field Id
-    <td class="pt-3-half" contenteditable="true"><input type="text" name="id" [(ngModel)]="fieldIdFilter" class="border-none"></td>
-    <span class="table-remove"><button type="button" (click)=filterById()
-                                       class="btn btn-danger btn-rounded btn-sm my-0">Filter</button></span>
-  </label>
-
-</div>
 <div class="container">
   <div class="card">
     <div class="card-body">
-      <br>
+      <br />
       <div class="row">
         <div class="col-md-12">
-          <table class="table table-bordered table-hover">
-            <thead>
-            <tr>
-              <th>#</th>
-              <th>field_id</th>
-              <th>field_name</th>
-              <th>field_code</th>
-              <th>concession_id</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let field of field; let currentIndex=index">
-              <td>{{currentIndex+1}}</td>
-              <td>{{field.fieldId}}</td>
-              <td>{{field.fieldName}}</td>
-              <td>{{field.fieldCode}}</td>
-              <td>{{field.concessionId}}</td>
-                            <td><button type="button" class="btn btn-danger" (click)="deleteFromField(currentIndex)">Delete</button></td>
+          <button class="btn btn-danger" (click)="deleteFromfields()">🗑️</button>
+          <button *ngIf="highlightedRow !== -1" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
+          <button class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
 
-            </tr>
-            <tr>
-              <td>#</td>
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="fieldId" [(ngModel)]="fieldId" class="border-none"></td>
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="fieldName" [(ngModel)]="r.fieldName" class="border-none"></td>
-<!--              <td class="pt-3-half" contenteditable="true"><input type="text" name="fieldCode" [(ngModel)]="r.fieldCode" class="border-none"></td>-->
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="concessionId" [(ngModel)]="r.concessionId" class="border-none"></td>
+          <ng-template #modalData let-modal>
+            <div class="modal-header">
+              <h4 class="modal-title" id="modal-basic-title">Insert New field Record</h4>
+<button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+  <span aria-hidden="true">×</span>
+</button>
+</div>
+<app-app-add-new-field (closeModal)=closePopUpAndRefreshTable()></app-app-add-new-field>
+</ng-template>
 
-              <td>
-             <span class="table-remove"><button type="button" (click)=insert()
-                                                class="btn btn-danger btn-rounded btn-sm my-0">Insert</button></span>
-              </td>
-            </tr>
-            </tbody>
-          </table>
+<ng-template #modalDataUpdate let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Update A field Record</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <app-app-update-field [fieldToBeUpdate]="fieldToBeUpdate" (closeModal)=closePopUpAndRefreshTable()></app-app-update-field>
+</ng-template>
 
-          <table class="table table-bordered table-hover">
-            <thead>
-            <tr>
-              <th>fieldId</th>
-              <th>fieldName</th>
-<!--              <th>fieldCode</th>-->
-              <th>concessionId</th>
-
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="fieldId" [(ngModel)]="fieldIdEdit" class="border-none"></td>
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="fieldName" [(ngModel)]="r2.fieldName" class="border-none"></td>
-<!--              <td class="pt-3-half" contenteditable="true"><input type="text" name="fieldCode" [(ngModel)]="r2.fieldCode" class="border-none"></td>-->
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="concessionId" [(ngModel)]="r2.concessionId" class="border-none"></td>
-
-              <td>
-                                <span class="table-remove"><button type="button" (click)=edit()
-                                                                   class="btn btn-danger btn-rounded btn-sm my-0">Edit</button></span>
-              </td>
-            </tr>
-
-            </tbody>
-          </table>
-        </div>
-
-      </div>
-    </div>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <table class="table table-bordered table-hover">
+      <thead>
+      <tr>
+        <th style="display: none">#</th>
+        <th>field_id</th>
+      <th>field_name</th>
+      <th>field_code</th>
+      <th>concession_id</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr
+        *ngFor="let field of fields; let currentIndex = index"
+        (click)="ClickedRowToDelete(currentIndex); ClickedRowToUpdate(currentIndex)"
+        [class.active]="currentIndex == highlightedRow"
+      >
+        <td style="display: none">{{ currentIndex + 1 }}</td>
+         <td>{{field.fieldId}}</td>
+         <td>{{field.fieldName}}</td>
+         <td>{{field.fieldCode}}</td>
+         <td>{{field.concessionId}}</td>
+        <!-- <td><button type="button" class="btn btn-danger" (click)="deleteFromFlms(currentIndex)">Delete</button></td> -->
+      </tr>
+      </tbody>
+    </table>
   </div>
 </div>
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
