--- a/src/app/components/well/well.component.html
+++ b/src/app/components/well/well.component.html
@@ -1,24 +1,41 @@
-<!--<p>well works!</p>-->
-<div class="form-check">
-  <label class="form-check-label" for="flexRadioDefault1">
-    Well Id
-    <td class="pt-3-half" contenteditable="true"><input type="text" name="id" [(ngModel)]="wellIdFilter" class="border-none"></td>
-    <span class="table-remove"><button type="button" (click)=filterById()
-                                       class="btn btn-danger btn-rounded btn-sm my-0">Filter</button></span>
-  </label>
-
-</div>
-
 <div class="container">
   <div class="card">
     <div class="card-body">
-      <br>
+      <br />
+      <div class="row">
+        <div class="col-md-12">
+          <button class="btn btn-danger" (click)="deleteFromwell()">🗑️</button>
+          <button *ngIf="highlightedRow !== -1" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
+          <button class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
+
+          <ng-template #modalData let-modal>
+            <div class="modal-header">
+              <h4 class="modal-title" id="modal-basic-title">Insert New Well Record</h4>
+              <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <app-app-add-new-well (closeModal)=closePopUpAndRefreshTable()></app-app-add-new-well>
+          </ng-template>
+
+          <ng-template #modalDataUpdate let-modal>
+            <div class="modal-header">
+              <h4 class="modal-title" id="modal-basic-title">Update A Well Record</h4>
+              <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <app-app-update-well [wellToBeUpdate]="wellToBeUpdate" (closeModal)=closePopUpAndRefreshTable()></app-app-update-well>
+          </ng-template>
+
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-12">
           <table class="table table-bordered table-hover">
             <thead>
             <tr>
-              <th>#</th>
+              <th style="display: none">#</th>
               <th>well_id</th>
               <th>well_name</th>
               <th>field_id</th>
@@ -26,57 +43,21 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let wel of well; let currentIndex=index">
-              <td>{{currentIndex+1}}</td>
+            <tr
+              *ngFor="let wel of wells; let currentIndex = index"
+              (click)="ClickedRowToDelete(currentIndex); ClickedRowToUpdate(currentIndex)"
+              [class.active]="currentIndex == highlightedRow"
+            >
+              <td style="display: none">{{ currentIndex + 1 }}</td>
               <td>{{wel.wellId}}</td>
               <td>{{wel.wellName}}</td>
               <td>{{wel.fieldId}}</td>
               <td>{{wel.wellCode}}</td>
-              <td><button type="button" class="btn btn-danger" (click)="deleteFromwell(currentIndex)">Delete</button></td>
-
-            </tr>
-
-            <tr>
-              <td>#</td>
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="wellId" [(ngModel)]="wellId" class="border-none"></td>
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="wellName" [(ngModel)]="r.wellName" class="border-none"></td>
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="fieldId" [(ngModel)]="r.fieldId" class="border-none"></td>
-<!--              <td class="pt-3-half" contenteditable="true"><input type="text" name="wellCode" [(ngModel)]="r.losses" class="border-none"></td>-->
-<!--           -->
-            <td>
-             <span class="table-remove"><button type="button" (click)=insert()
-                                                                 class="btn btn-danger btn-rounded btn-sm my-0">Insert</button></span>
-              </td>
-            </tr>
-            </tbody>
-          </table>
-
-          <table class="table table-bordered table-hover">
-            <thead>
-            <tr>
-              <th>wellId</th>
-              <th>wellName</th>
-              <th>fieldId</th>
-<!--              <th>wellCode</th>-->
-
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="wellId" [(ngModel)]="wellIdEdit" class="border-none"></td>
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="wellName" [(ngModel)]="r2.wellName" class="border-none"></td>
-              <td class="pt-3-half" contenteditable="true"><input type="text" name="fieldId" [(ngModel)]="r2.fieldId" class="border-none"></td>
-<!--              <td class="pt-3-half" contenteditable="true"><input type="text" name="wellCode" [(ngModel)]="r2." class="border-none"></td>-->
-<!--             -->
-              <td>
-                                <span class="table-remove"><button type="button" (click)=edit()
-                                                                   class="btn btn-danger btn-rounded btn-sm my-0">Edit</button></span>
-              </td>
+              <!-- <td><button type="button" class="btn btn-danger" (click)="deleteFromFlms(currentIndex)">Delete</button></td> -->
             </tr>
             </tbody>
           </table>
         </div>
-
       </div>
     </div>
   </div>
