--- a/src/app/components/concession/concession.component.css
+++ b/src/app/components/concession/concession.component.css
@@ -1,83 +1,63 @@
-body {
-  color: #404E67;
-  background: #F5F7FA;
-  font-family: 'Open Sans', sans-serif;
+button {
+  margin-left: 20px;
 }
-.table-wrapper {
-  width: 700px;
-  margin: 30px auto;
-  background: #fff;
-  padding: 20px;
-  box-shadow: 0 1px 1px rgba(0,0,0,.05);
-}
-.table-title {
-  padding-bottom: 10px;
-  margin: 0 0 10px;
-}
-.table-title h2 {
-  margin: 6px 0 0;
-  font-size: 22px;
-}
-.table-title .add-new {
-  float: right;
-  height: 30px;
-  font-weight: bold;
-  font-size: 12px;
-  text-shadow: none;
-  min-width: 100px;
-  border-radius: 50px;
-  line-height: 13px;
-}
-.table-title .add-new i {
-  margin-right: 4px;
-}
-table.table {
-  table-layout: fixed;
-}
-table.table tr th, table.table tr td {
-  border-color: #e9e9e9;
-}
-table.table th i {
-  font-size: 13px;
-  margin: 0 5px;
-  cursor: pointer;
-}
-table.table th:last-child {
-  width: 100px;
-}
-table.table td a {
-  cursor: pointer;
-  display: inline-block;
-  margin: 0 5px;
-  min-width: 24px;
-}
-table.table td a.add {
-  color: #27C46B;
-}
-table.table td a.edit {
-  color: #FFC107;
-}
-table.table td a.delete {
-  color: #E34724;
-}
-table.table td i {
-  font-size: 19px;
-}
-table.table td a.add i {
-  font-size: 24px;
-  margin-right: -1px;
+
+/* Structure */
+.example-container {
   position: relative;
-  top: 3px;
+  min-height: 200px;
 }
-table.table .form-control {
-  height: 32px;
-  line-height: 32px;
-  box-shadow: none;
-  border-radius: 2px;
+.my-card{
+ position: center;
+  top: 150px;
+  max-height: 800px;
+  max-width: 600px;
+  background-color: #feffff;
 }
-table.table .form-control.error {
-  border-color: #f50000;
+
+.example-table-container {
+  position: relative;
+  height: 400px;
+  overflow: auto;
 }
-table.table td .add {
-  display: none;
+
+table {
+  width: 70%;
 }
+
+.example-loading-shade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 56px;
+  right: 0;
+  background: rgba(0, 0, 0, 0.15);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-rate-limit-reached {
+  color: #980000;
+  max-width: 360px;
+  text-align: center;
+}
+
+/* Column Widths */
+.mat-column-ID {
+  max-width: 150px;
+}
+.mat-column-ConcessionName{
+  width: 300px;
+}
+
+/*formatting the material dialog*/
+.my-class .mat-dialog-container {
+  height: 400px;
+  width: 600px;
+  border-radius: 10px;
+  background: lightcyan;
+  color: #039be5;
+}
+
