lab measurment_pagination osman

--- a/src/app/chart-s1-date/chart-s1-date.component.html
+++ b/src/app/chart-s1-date/chart-s1-date.component.html
@@ -1,5 +1,5 @@
 <div>
-<button  type="submit" class="btn btn-primary" (click)="show()">Insert</button>
+<button  type="submit" class="btn btn-primary" (click)="show()">Show Chart</button>
 </div>
 
 <div id="chart">
