--- a/src/app/dialogs/delete/budget-actual-delete/budget-actual-delete.component.html
+++ b/src/app/dialogs/delete/budget-actual-delete/budget-actual-delete.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h3 mat-dialog-title>Are you sure you wanna delete this Record?</h3>
   <div mat-dialog-content>
-    Name: {{data.index}}
+    Name: {{data.recordId}}
   </div>
   <div mat-dialog-actions>
     <button mat-button color="warn" [mat-dialog-close]="1" (click)="confirmDelete()">Delete</button>
