--- a/src/app/components/fluid-level-measurements/fluid-level-measurements.component.html
+++ b/src/app/components/fluid-level-measurements/fluid-level-measurements.component.html
@@ -52,7 +52,7 @@
             </thead>
             <tbody>
               <tr
-                *ngFor="let flm of flms; let currentIndex = index"
+                *ngFor="let flm of flms | paginate: { itemsPerPage: elements, currentPage: page, totalItems: totalRecords  }; let currentIndex = index"
                 (click)="ClickedRowToDelete(currentIndex); ClickedRowToUpdate(currentIndex)"
                 [class.active]="currentIndex == highlightedRow"
               >
@@ -72,6 +72,10 @@
               </tr>
             </tbody>
           </table>
+
+          <div class="text-right">
+            <pagination-controls (pageChange)="page = $event; updateDataArray();"></pagination-controls>
+          </div>
         </div>
       </div>
     </div>
