--- a/src/app/components/fluid-level-measurements/fluid-level-measurements.component.html
+++ b/src/app/components/fluid-level-measurements/fluid-level-measurements.component.html
@@ -76,6 +76,10 @@
           <div class="text-right">
             <pagination-controls (pageChange)="page = $event; updateDataArray();"></pagination-controls>
           </div>
+
+
+          <!-- <br>
+          <app-flm-line-chart></app-flm-line-chart> -->
         </div>
       </div>
     </div>
